--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,36 @@
-/*.nav {*/
-/*  background-color: #A46845;*/
-/*  overflow: hidden;*/
-/*  position: fixed;*/
-/*  width: 100%;*/
-/*}*/
+.nav {
+  background-color: #A46845;
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+}
 
-/*.nav a {*/
-/*  float: left;*/
-/*  color: #f2f2f2;*/
-/*  text-align: center;*/
-/*  padding: 14px 16px;*/
-/*  text-decoration: none;*/
-/*  font-size: 17px;*/
-/*}*/
+.nav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-/*.nav a:hover {*/
-/*  background-color: #ddd;*/
-/*  color: black;*/
-/*}*/
+.nav a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
-/*.nav a.active {*/
-/*  color: white;*/
-/*}*/
+.nav a.active {
+  color: white;
+}
 
-/*.image-div div{*/
-/*    display: inline;*/
-/*    padding: 3em;*/
-/*  }*/
+.products {
+    display: inline;
+    padding: 3em;
+  }
 
-/*div img {*/
-/*width: 25%;*/
-/*border: .1em solid black;*/
-/* }*/
+div  img {
+  padding-top: 20px;
+  margin-top: 20px;
+  width: 10%;
+  border: .1em solid black;
+ }
