--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,9 @@
     padding: 3em;
   }
 
-div img {
+section img {
   padding-top: 20px;
   margin-top: 20px;
-  max-width: 250px;
-  max-height: 250px;
+  width: 15em;
   border: .1em solid black;
  }
