--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,8 @@
 section img {
   padding-top: 20px;
   margin-top: 20px;
-  width: 15em;
+  width: 20%;
+  height: 30%;
   border: .1em solid black;
+  object-fit: scale-down;
  }
